# bmad-automator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  RELEASING.md  SECURITY.md  module.yaml  prettier.config.mjs  pyproject.toml
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  documentation.yaml  feature-request.md
.github/workflows/: ci.yml  release.yml
.trunk/: trunk.yaml
.trunk/configs/: .markdownlint.yaml
docs/: FEATURES.md  README.md  ROADMAP.md  game-engine-mcp-guide.md  game-engine-plugin-guide.md  plugin-authoring-guide.md  setup-guide.md  tea-plugin-guide.md  tui-guide.md
module/.claude-plugin/: marketplace.json
module/tool/src/automator/adapters/: generic_tmux.py
scripts/: gen_demo.py  gen_screenshots.py  release.py  sync-tool.py
skills/: README.md
skills/bmad-auto-dev/: deferred-work-format.md
skills/tool/src/automator/: __init__.py  bmadconfig.py  cli.py  deferredwork.py  engine.py  escalation.py  gates.py  install.py  journal.py  model.py  policy.py  signals.py  sprintstatus.py  statemachine.py  sweep.py  tokens.py  verify.py
skills/tool/src/automator/adapters/: __init__.py  base.py  generic_tmux.py  mock.py  opencode_http.py  profile.py
skills/tool/src/automator/tui/: app.py  data.py  launch.py  settings.py  widgets.py
src/automator/: __init__.py  bmadconfig.py  cli.py  decisions.py  engine.py  install.py  journal.py  model.py  policy.py  resolve.py  runs.py  scm_github.py  settings_schema.py  signals.py  statemachine.py  sweep.py  verify.py  workspace.py
src/automator/adapters/: base.py  generic_tmux.py  profile.py
src/automator/data/engines/unity/: engine.toml  unity_ready.py  unity_setup.py  unity_teardown.py
src/automator/data/plugins/example/: plugin.toml
src/automator/data/plugins/tea/: plugin.toml  tea_plugin.py
src/automator/data/plugins/unity/: plugin.toml  unity_cleanup.py  unity_plugin.py  (+3 more)
src/automator/data/profiles/: claude.toml  codex.toml  gemini.toml
src/automator/data/settings/: core.toml
src/automator/data/skills/: README.md
src/automator/engines/: __init__.py  plugin.py
src/automator/plugins/: bus.py  context.py  loader.py  model.py  registry.py
src/automator/tui/: __init__.py  app.py  data.py  launch.py  settings.py  widgets.py
src/automator/tui/screens/: dashboard.py  modals.py  settings_screen.py
src/bmad_automator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_bmadconfig.py  test_cleanup.py  test_cli.py  test_decisions.py  test_engine.py  test_engine_plugin.py  test_engine_pr.py  test_engine_worktree.py  test_generic_tmux.py  test_install.py  test_model.py  test_module_skills_sync.py  test_module_tool_sync.py  test_plugin_tea.py  test_plugin_workflows.py  test_policy.py  test_profile.py  test_release.py  test_resolve.py  test_runs.py  test_scm_github.py  test_settings_schema.py  test_signals.py  test_sweep.py  test_tui_app.py  test_tui_data.py  test_tui_launch.py  test_tui_settings.py  test_verify.py  test_verify_worktree.py
(+19 files in other folders)
