[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bmad-automator"
version = "0.1.0"
description = "Deterministic ralph-loop orchestrator for the BMAD implementation phase"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
bmad-auto = "automator.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"automator.data" = ["profiles/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
# skill assets contain template placeholders that are not valid Python
extend-exclude = [".agents", ".claude"]
