[build-system]
requires = ["hatchling>=1.30"]
build-backend = "hatchling.build"

[project]
name = "bmad-automator"
version = "0.4.0"
description = "Deterministic ralph-loop orchestrator for the BMAD implementation phase"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
bmad-auto = "automator.cli:main"

[project.optional-dependencies]
tui = ["textual>=8.0,<9", "tomlkit>=0.13", "pyte>=0.8.2"]

[dependency-groups]
# dev gets tui via `uv sync --all-extras` (groups can't self-reference an extra).
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "pytest-asyncio>=1.0",
  "pytest-rerunfailures>=16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/automator"]

[tool.hatch.build.targets.sdist]
# .trunk/tools holds an absolute external symlink (trunk launcher) that breaks
# sdist packing; it is dev tooling and irrelevant to the source distribution.
exclude = ["/.trunk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
# skill assets contain template placeholders that are not valid Python
extend-exclude = [".agents", ".claude", "src/automator/data/skills"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
